--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <ul><li><a href="#header">HOME</a></li>
         <li><a href="#course">SERVERS</a></li>
             <li><a href="#course">IPTV</a></li>
-            <li><a href="course">PAYMENTS</a></li>
+            <li><a href="#course">PAYMENTS</a></li>
             <li><a href="index.html">CONTACT US</a></li>
             <li><a href="#facilities">RESELLER OFFERS</a></li>
         </ul>
